eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-server-api-service
spec:
  selector:
    app: bank-server-api
  ports:
    - protocol: TCP
      port: 80 #port which the service will listen to incoming requests
      targetPort: http-server #where the requests will be forwarded to
      name: http-service
    - protocol: TCP
      port: 90
      targetPort: grpc-server
      name: grpc-service
  type: ClusterIP
