eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-server-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.bankserver.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-server-api-service
            port:
              number: 90
  tls:
  - hosts:
    - gapi.bankserver.com
    secretName: bank-server-gapi-cert
